# iresearch-spider-rs

./: Cargo.toml  README.md  data.csv
.github/workflows/: armv7.yml  armv7hf-linux.yml  ci-amd64-linux.yml  ci-amd64-windows.yml  ci-armv7hf-linux.yml  release.yml
src/: lib.rs  main.rs
tests/: fetch_research_report_by_id.rs
