[package]
name = "iresearch-spider-rs"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/jerryshell/iresearch-spider-rs"

[dependencies]
reqwest = { version = "0", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
futures = "0"
csv = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
lto = true
strip = true
