[package]
name = "iresearch-spider-rs"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/jerryshell/iresearch-spider-rs"

[dependencies]
reqwest = { version = "*", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "*", features = ["full"] }
serde = {version = "*", features = ["derive"]}
serde_json = "*"
futures = "*"
csv = "*"
clap = { version = "4", features = ["derive"] }
anyhow = "*"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
